--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,14 +1,15 @@
 @import "@/assets/style/_reset";
 @import "@/assets/style/_libs";
-@import "@/assets/style/_breakpoints.scss";
-@import "@/assets/style/_mixins";
+@import "@/assets/style/global";
+@import "@/assets/style/transitions";
 
 * {
-  font-family: Montserrat, sans-serif !important;
+  --font-family: 'Montserrat', sans-serif;
 }
 
 html {
   font-size: 13px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,9 +19,46 @@ body {
 }
 
 #app {
+  min-height: 100vh; // Fallback to the line below
+  min-height: 100dvh;
+  position: relative;
+  padding-bottom: 4rem;
+}
+
+.main-layout {
   padding: 5vh 5vw;
   margin: 0 auto;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.chouquette-mode {
+  $bg-overlay-opacity: 0.3;
+
+  animation: chouquette-mode-rolling .8s both;
+
+  background-size: 8.375rem auto;  
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: var(--surface-b);
+    opacity: $bg-overlay-opacity;
+    box-shadow: var(--surface-b) 0 0 0 100rem;
+  }
+
+  & .p-menubar,
+  & footer {
+    background: rgba(31, 45, 64, $bg-overlay-opacity);
+  }
+}
+
+.remove-chouquette-mode {
+  animation: chouquette-mode-rolling-reverse .8s both;
 }
 
 .pi {
@@ -28,8 +66,9 @@ body {
 }
 
 h1 {
+  font-family: $ch-font-family;
   font-size: 2.75rem;
-  font-weight: 500;
+  font-weight: 700;
   text-align: center;
 }
 
@@ -65,14 +104,10 @@ p {
 
 a {
   color: var(--primary-color) !important;
-
-  &:hover,
-  &:focus{
-    text-decoration: underline !important;
-  }
+  cursor: pointer;
 }
 
-.p-button:focus {
+.p-button:focus-visible {
   transform: scale(1.05);
 }
 
@@ -80,21 +115,29 @@ a {
   font-weight: 500;
 }
 
+.skeleton-list {
+  display: flex;
+  flex-direction: column;
+  gap: 5vh;
+}
+
+$main-layout-extra-space: 1.3rem;
+
 @include sm {
   html {
     font-size: 14px;
   }
 
-  #app {
-    width: $screen-sm-min;
+  .main-layout {
+    width: calc($screen-sm-min - $main-layout-extra-space);
   }
 
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 
   h2 {
-      font-size: 2rem;
+    font-size: 2rem;
   }
 }
 
@@ -103,8 +146,8 @@ a {
     font-size: 15px;
   }
 
-  #app {
-    width: $screen-md-min;
+  .main-layout {
+    width: calc($screen-md-min - $main-layout-extra-space);
   }
 }
 
@@ -113,13 +156,13 @@ a {
     font-size: 16px;
   }
 
-  #app {
-    width: $screen-lg-min;
+  .main-layout {
+    width: calc($screen-lg-min - $main-layout-extra-space);
   }
 }
 
 @include xl {
-  #app {
-    width: $screen-xl-min;
+  .main-layout {
+    width: calc($screen-xl-min - $main-layout-extra-space);
   }
 }
